# DOOM_web

./: .gitignore  ConsoleController.cpp  ConsoleController.h  Dockerfile  Main.cpp  Map.txt  MapController.cpp  MapController.h  Player.cpp  Player.h  README.md  RayCasting.cpp  RayCasting.h  docker-compose.yml
.github/workflows/: debug.yml  release.yml  test.yml
Client/: Client.cpp  Client.h  main.cpp
Doom_legacy_nginx/: docker-compose.yml
Doom_legacy_nginx/game_server/: Dockerfile  main.data  main.html  main.js  main.wasm  nginx.conf
Raycasting/: ConsoleController.cpp  ConsoleController.h  Main.cpp  Map.txt  MapController.cpp  MapController.h  Player.cpp  Player.h  RayCasting.cpp  RayCasting.h
Rendering Raylib/: CMakeLists.txt  Makefile
Rendering Raylib/include/: CameraPlayer.hpp  Client.hpp  Fps.hpp  Map.hpp  Menu.hpp  Page.hpp  Pause.hpp  PickUp.hpp  Player.hpp  Resurrection.hpp  ScoreTable.hpp  ScreenSaver.hpp  Settings.hpp  Summary.hpp  Timer.hpp  Tools.hpp  User.hpp  Weapon.hpp  World.hpp
Rendering Raylib/resources/: bigMaze.txt  maze.txt  textures.txt
Rendering Raylib/src/: CameraPlayer.cpp  Client.cpp  Fps.cpp  Map.cpp  Menu.cpp  Pause.cpp  PickUp.cpp  Player.cpp  Resurrection.cpp  ScoreTable.cpp  ScreenSaver.cpp  Settings.cpp  Summary.cpp  Timer.cpp  Tools.cpp  User.cpp  Weapon.cpp  World.cpp  main.cpp
Rendering Raylib/tests/: CMakeLists.txt  test.cc
Rendering SFML/: Makefile
Rendering SFML/include/: Camera.hpp  Fps.hpp  Map.hpp  Player.hpp  Tools.hpp  World.hpp
Rendering SFML/lib/cmake/SFML/: SFMLConfigVersion.cmake  SFMLStaticTargets-release.cmake  SFMLStaticTargets.cmake
Rendering SFML/resources/: bigMaze.txt  maze.txt
Rendering SFML/src/: Camera.cpp  Fps.cpp  Map.cpp  Player.cpp  Tools.cpp  World.cpp  main.cpp
Rendering/include/: Camera.hpp  Fps.hpp  Map.hpp  Player.hpp  Tools.hpp  World.hpp
Rendering/src/: Camera.cpp  Fps.cpp  Map.cpp  Player.cpp  Tools.cpp  World.cpp  main.cpp
Server/: Arr.cpp  Arr.h  CMakeLists.txt  Server.cpp  Server.h  main.cpp
Server/include/: Data.hpp  Lobby.hpp  LobbyNode.hpp  Player.hpp  PlayerInfo.hpp  Server.h  Server.hpp  Tools.hpp  World.hpp
Server/include/client/: Client.hpp  Data.hpp  Map.hpp  Player.hpp  Timer.hpp  World.hpp
Server/resources/: maze.txt
Server/src/: Lobby.cpp  LobbyNode.cpp  Player.cpp  PlayerInfo.cpp  Server.cpp  Tools.cpp  World.cpp  main.cpp
Server/src/client/: Client.cpp  Fps.cpp  Map.cpp  Menu.cpp  Pause.cpp  Player.cpp  Resurrection.cpp  ScoreTable.cpp  ScreenSaver.cpp  Settings.cpp  Summary.cpp  Timer.cpp  Weapon.cpp  World.cpp  main.cpp
WEBASM_docker/: docker-compose.yml
WEBASM_docker/client/: Dockerfile  client.py
WEBASM_docker/server/: Dockerfile  server.py  snake.data  snake.html  snake.js  snake.wasm
Web version/: Dockerfile  docker-compose.yml  nginx.conf
Web version/web/: login.html  main.html  main.wasm
tests/: AllTests.cc  CMakeLists.txt  Makefile
tests/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
tests/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
website/: game.html  index.html  login.html  main.html  main.js
website/css/: main.css
website/prev_version/: main.html  main.js  main.wasm
